--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,14 @@
 body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+    padding: 50px;
+    font:
+        28px "Lucida Grande",
+        Helvetica,
+        Arial,
+        sans-serif;
+    background-color: aliceblue;
 }
 
 a {
-  color: #00B7FF;
+    font-size: 20px;
+    color: #400741;
 }
