--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,11 +1,3 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title><%= title %></title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-  </head>
-  <body>
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
-  </body>
-</html>
+<%- include("partials/header")%> <%- include("partials/navigation")%>
+<h1>Welcome to the Worst Resume Ever</h1>
+<%-include("partials/footer")%>
